Enable CC for all plugin tests