@@ -29,7 +29,7 @@ repositories {
     mavenCentral()
 }
 
-test {
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
 
     if (System.env.CI == 'true') {
@@ -39,6 +39,19 @@ test {
     }
 
     systemProperty 'java.io.tmpdir', buildDir.absolutePath
+
+    // Required to test configuration cache in tests when using withDebug()
+    // https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241
+    jvmArgs(
+            "--add-opens",
+            "java.base/java.util=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.net=ALL-UNNAMED",
+    )
 }
 
 // jar {
